Wed Sep 11 12:33:34 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkstyle.c: Draw radio buttons more symmetric. Draw shadow
	out bevels slightly different. Fix drawing of top right corner of
	etched in shadows.

Tue Sep 10 09:47:52 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* modules/input/gtkimcontextxim.c
	(get_im): modify a warning when XSetLocaleModifiers() fails, and
	add a warning when XOpenIM() fails
	(gtk_im_context_xim_filter_keypress): use XLookupString when xic
	is not available. (#90661)
	(gtk_im_context_xim_get_ic, gtk_im_with_preedit,
	gtk_im_without_preeedit): filter key release events only when
	input methods ask for (#81759)

Tue Sep 10 11:11:09 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/linux-fb/*: Patch from Eric Warmonhoven to
	get linux-fb compiling with multihead changes.

Tue Sep 10 09:29:00 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_event_translate): Take
	focus mode into account when tracking FocusIn/Out events,
	so we don't get confused by focus changes while a 
	keyboard grab is in effect. (Probably fixes #90563)

Mon Sep  9 16:16:25 2002  Shivram U  <shivaram.upadhyayula@wipro.com>

	* gtk/gtktextview.c (gtk_text_view_drag_motion): If the end iter
	is also a part of the selection, then we are in the selection.
	(#92768)

2002-09-08  Tor Lillqvist  <tml@iki.fi>

	* configure.in: Add AM_CONDITIONAL calls also in the non-x11
	branch. Otherwise we get "conditional \"$1\" was never defined.
	Usually this means the macro was only invoked conditionally."
	errors when running configure if using automake 1.6a. Yeah, I know
	that autogen.sh says to use automake 1.4, but on Win32 I more or
	less have to use the bleeding edge. I think.

Sat Sep  7 21:24:55 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktoolbar.c (get_button_relief): call
	gtk_widget_ensure_style() before reading "button_relief". Fixes
	(#92741).

2002-09-06  Matthias Clasen  <maclas@gmx.de>
